# ez-mpc

./: README.md
data-contract/api-go/: Makefile  gen.sh  go.mod  main.go
data-contract/api-go/core/: types.pb.go
data-contract/api-go/core/github.com/ez-mpc/data-contract/v1/: types.pb.go
data-contract/api-py/: gen.sh  pyproject.toml
data-contract/api-py/api_py/: main.py
data-contract/api-py/api_py/core/: types_pb2.py  types_pb2.pyi
data-contract/api-rust/: Cargo.toml  build.rs
data-contract/api-rust/src/: api.rs  main.rs
data-contract/protos/: types.proto
mpc/: Cargo.toml
mpc-wasm-pack-template/: Cargo.toml
mpc-wasm-pack-template/src/: lib.rs  main.rs
mpc/src/: lib.rs
obliv-rust/: Cargo.toml
obliv-rust/benches/: draft.rs  obliv_macro.rs
obliv-rust/examples/: draft.rs  obliv_macro.rs
obliv-rust/src/: draft.rs  lib.rs  main.rs  mpc_core.rs  obliv_macro.rs  plain_garbling.rs  semihonest_2pc.rs  simple_garbling.rs  wires.rs
security_mode/: Cargo.toml
security_mode/src/: lib.rs
security_mode/tests/: test.rs
web/: package.json
web/public/: my-wasm.wasm
web/src/: App.js  useWasm.js
