[package]
name = "obliv-rust"
version = "0.1.0"
authors = ["Arash Afshar <arash.afshar.edu@gmail.com>"]
edition = "2018"


[dependencies]

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "obliv_macro"
harness = false

[dependencies.scuttlebutt]
git = "https://github.com/GaloisInc/swanky"
                                                                                                         
[dependencies.ocelot]
git = "https://github.com/GaloisInc/swanky"
                                                    
[dependencies.fancy-garbling]
git = "https://github.com/GaloisInc/swanky"

[dependencies.rand_core]
version = "0.5"

[dependencies.rand]
version = "0.7"

[dependencies.serde]
version = "1.0.105"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
