[package]
name = "security_mode"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1.0.60", features=["extra-traits", "full", "printing"]}
quote = "1.0.9"
proc-macro2 = "1.0.23"
