[tool.poetry]
name = "api-py"
version = "0.1.0"
description = ""
authors = ["Arash Afshar <arash.afshar.edu@gmail.com>"]
readme = "README.md"
packages = [{include = "api_py"}]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
